style: swiched back to java 8 to support older versions